--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ava test",
     "knex": "knex"
   },
   "author": "Dan Levy <Dan@DanLevy.net>",
   "license": "MIT",
   "dependencies": {
+    "ava": "^0.22.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
